--- a/amintiri/package.json
+++ b/amintiri/package.json
@@ -12,8 +12,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.17.1",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
