--- a/amintiri/package.json
+++ b/amintiri/package.json
@@ -14,8 +14,10 @@
     "ajv": "^8.17.1",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1",
